Feat: Add teacher page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,12 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".", 
     "paths": {
-      "@/*": ["./*"]
+      "@/components/*": ["app/components/*"],
+      "@/teacher/*": ["app/teacher/*"],
+      "@/dashboard/*": ["app/dashboard/*"],
+      "@/pages/*": ["app/pages/*"] 
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
