--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,20 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".", 
+    "baseUrl": ".",
     "paths": {
       "@/components/*": ["app/components/*"],
       "@/teacher/*": ["app/teacher/*"],
       "@/dashboard/*": ["app/dashboard/*"],
-      "@/pages/*": ["app/pages/*"] 
+      "@/pages/*": ["app/pages/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/dashboard/student/component/Chart.tsx"
+  ],
   "exclude": ["node_modules"]
 }
