--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.19.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
-    "next": "14.2.8",
+    "html-react-parser": "^5.1.16",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.12.7"
